# app/Http/Controllers/CartController.php
@@ -6,6 +6,7 @@ use App\Exceptions\BookStoreException;
 use App\Models\Book;
 use App\Models\Cart;
 use App\Models\User;
+use App\Models\WishList;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Cache;
 use Illuminate\Support\Facades\DB;
@@ -363,6 +364,99 @@ class CartController extends Controller
             return response()->json([
                 'message' => 'Book Quantity decreament Successfully'
             ], 201);
+        } catch (BookStoreException $exception) {
+            return $exception->message();
+        }
+    }
+
+    /**
+     * @OA\Post(
+     *   path="/api/addtocartbywishlistid",
+     *   summary="Add the book to Cart",
+     *   description=" Add to cart ",
+     *   @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"wishlist_id"},
+     *               @OA\Property(property="wishlist_id", type="integer"),
+     *            ),
+     *        ),
+     *    ),
+     *   @OA\Response(response=201, description="Book added to Cart Sucessfully"),
+     *   @OA\Response(response=404, description="Invalid authorization token"),
+     *   security = {
+     * {
+     * "Bearer" : {}}}
+     * )
+     */
+    /**
+     * This Function will take wishlist id as input and it will ad that book to cart
+     * as per user's requirement
+     */
+    public function addBookToCartByWishlistId(Request $request) {
+        $validator = Validator::make($request->all(), [
+            'wishlist_id' => 'required|integer',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json($validator->errors()->toJson(), 400);
+        }
+
+        try {
+            $currentUser = JWTAuth::parseToken()->authenticate();
+            $cart = new Cart();
+            $book = new Book();
+            $user = new User();
+            $userId = $user->userVerification($currentUser->id);
+            if (!$userId) {
+                return response()->json(['message' => 'You are not an User'], 404);
+            }
+            if ($currentUser) {
+                $wishlist = WishList::where('id', $request->wishlist_id)->first();
+                $book_id = $wishlist['book_id'];
+                $book_existance = $book->findBook($book_id);
+
+                if (!$book_existance) {
+                    return response()->json([
+                        'status' => 404,
+                        'message' => 'Book not Found'
+                    ], 404);
+                }
+                $books = Book::find($book_id);
+                if ($books->quantity == 0) {
+                    return response()->json([
+                        'status' => 404,
+                        'message' => 'OUT OF STOCK'
+                    ], 404);
+                }
+                $book_cart = $cart->bookCart($book_id, $currentUser->id);
+
+                if ($book_cart ) {
+                    return response()->json([
+                        'status' => 404,
+                        'message' => 'Book already added in cart'
+                    ], 404);
+                }
+
+                $cart->book_id = $wishlist['book_id'];
+
+                if ($currentUser->carts()->save($cart)) {
+                    Cache::remember('carts', 3600, function () {
+                        return DB::table('carts')->get();
+                    });
+                    return response()->json([
+                        'cart' => $book_cart,
+                        'message' => 'Book added to Cart Sucessfully'], 201);
+                }
+
+                return response()->json(['message' => 'Book cannot be added to Cart'], 405);
+            } else {
+                Log::error('Invalid User');
+                throw new BookStoreException("Invalid authorization token", 404);
+            }
         } catch (BookStoreException $exception) {
             return $exception->message();
         }
